2001-10-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c term/tgif.trm term/pm.trm term/gif.trm term/fig.trm
	term/cgm.trm: The first and the last colour ranges in 'set palette
	maxcolors' were different (half of the range) than the "inner"
	colour ranges. I.e. now	the discrete palette drivers have the 
	set_color(gray) routine coded like
	    int gif_color = (int)( gray * sm_palette.colors );
	instead of the previous
	    int gif_color = (int)( gray * (sm_palette.colors-1) + 0.5 );
	Some other drivers have already this code, so all is unified now.

	* term/post.trm: If 'set palette maxcolors', then the colour for the
	last colour box [(colors-1)/colors; 1.0] should equal the last colour
	from the mapping formulae, as for the discrete palette drivers.

	* src/win/wgraph.c: Support for 'set palette maxcolors'.

2001-10-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

        * win/pgnuplot.c (cbGetTextWindow): Revert return value to behave
        like the documentation of the EnumThreadWindows() Win32 API call
        expects it.

2001-10-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graph3d.c (boundary) Add code to handle `set size square' or
 	`set size ratio <number>' for 3D plots, too. Code essentially
 	copied out of the one found in 2D equivalent function `boundary'.
	(boundary3d): Remove stale argument `scaling' and code trying to
 	use it --- term->scale() was disallowed long ago.
  	(do_3dplot): Remove local variable `scaling' and code
 	setting/using it.

	* src/graphics.c (boundary): Remove unused argument 'scaling'
	(do_plot): Remove local variable `scaling' which used to be passed
 	to boundary(), where it wasn't used anyway.

2001-10-11  Dick Crawford <crawford@arete.com>

	* term/post.trm (PS_header): Old PostScript linewidth patch for
 	dotted axis linetype finally brought into 3.8 branch. Affects
 	macros /BL, /AL, /UL, and /LTa. /UL macro fixed to avoid problems